--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -18532,6 +18532,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BibNum               int64\n",
+       "Title               object\n",
+       "Author              object\n",
+       "ISBN                object\n",
+       "PublicationYear      int64\n",
+       "ItemType            object\n",
+       "ItemCollection      object\n",
+       "ItemLocation        object\n",
+       "ItemPrice          float64\n",
+       "ReportDate          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'string'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas.api.types as pd_types\n",
+    "\n",
+    "inferred_dtype = pd_types.infer_dtype(merged_df['ISBN'])\n",
+    "inferred_dtype\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 99,
    "metadata": {},
    "outputs": [],
